Version 1.3.16+svn:
 * language and i18n:
   * updated translations: Catalan, Chinese, Esperanto, German, Slovak, Spanish,
     Valencian
 * tinygui:
   * fixed fontsize for the clock
   * removed $RACE entry when using tinygui
   * fixed replay theme in tinygui to display correctly
 * user interface:
   * tinygui:
     * fixed fontsize for the clock
     * removed $RACE entry when using tinygui
     * fixed replay theme in tinygui to display correctly
     * get closer to the normal theme when tinygui is active and the
       resolution bigger than 400x300
   * reduce minimap in resolutions <1000x620 to allow displaying all attacks
     from units with many attacks (eg the sylph)
   * add support for 800x480 when using the configure option
     --enable-small-gui, not everything displays correctly (preferences,
     mp-creation/lobby, ...), but normal gameplay should work perfectly
   * quick replays no longer scroll to leaders
   * scrolling to the leader the very first time happens instantly now
 * WML engine:
   * unstoring a leader for a side without a leader sets the leader for
     that side (bug #11048)
 * miscellaneous and bug fixes:
   * replays of midgame saves get the right recall list now (bug #10868)
   * Fixed controller problems when reloading MP game (bug #11046 and bit more)
   * Made scrollarea to stay in bottom if it is resized (bug #6974)
   * Fixed reference to invalid iterator in unit_cycle (bug #7991)
   * Fixed side_drop server message handling to correctly restart turn
   * Fixed random start ToD (bug #11056)
   * Fix an assert crash when a fake_unit_move starts outside of the screen
   
Version 1.3.16:
 * campaigns:
   * Two Brothers: set the leader of scenario one to passive to make it not
     too easy to win
 * language and i18n:
   * updated translations: Chinese, Czech, Dutch, Filipino, Finnish, German,
     Greek, Hungarian, Italian, Lithuanian, Polish, Slovak, Spanish, Turkish