@@ -2,6 +2,9 @@ Version 1.3.16+svn:
  * language and i18n:
    * updated translations: Catalan, Chinese, Esperanto, German, Slovak, Spanish,
      Valencian
+ * campaign server:
+   * added more logging
+   * remembers the last maintainer upload IP
  * tinygui:
    * fixed fontsize for the clock
    * removed $RACE entry when using tinygui
